iframeConverter関数の作成(糞コードのため、要リファクタ)
