# docs/openapi/src/components/schemas/MicroCMSWebhookRequest.json
@@ -2,6 +2,30 @@
     "$schema": "http://json-schema.org/draft-07/schema#",
     "definitions": {
         "T": {
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "publishedAt": {
+                    "type": "string"
+                },
+                "revisedAt": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            },
+            "required": [
+                "createdAt",
+                "id",
+                "publishedAt",
+                "revisedAt",
+                "updatedAt"
+            ],
             "type": "object"
         }
     },
@@ -45,7 +69,7 @@
                     ],
                     "type": "object"
                 },
-                "out": {
+                "old": {
                     "properties": {
                         "draftKey": {
                             "type": "string"
@@ -82,7 +106,7 @@
             },
             "required": [
                 "new",
-                "out"
+                "old"
             ],
             "type": "object"
         },
